--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,7 @@
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.25.0</version>
-            <scope>test</scope>
+            <version>4.27.0</version> <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
